--- a/Hangman/Hangman.vcxproj
+++ b/Hangman/Hangman.vcxproj
@@ -146,6 +146,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="hangman.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Header.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
