--- a/Hangman/Hangman.vcxproj
+++ b/Hangman/Hangman.vcxproj
@@ -147,10 +147,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="hangman.h" />
+    <ClInclude Include="HighScores.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Header.cpp" />
+    <ClCompile Include="HighScores.cpp" />
     <ClCompile Include="Source.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Hangman.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="highscores.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
